--- a/client/src/components/product-forms/apartment-form/ApartmentForm.css
+++ b/client/src/components/product-forms/apartment-form/ApartmentForm.css
@@ -1,149 +1,148 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap");
 
 .apartment-form-wrapper * {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .apartment-form-wrapper {
-    display: grid;
-    user-select: none;
-    place-items: center;
-    height: calc(100vh - 5rem);
+  display: grid;
+  user-select: none;
+  place-items: center;
+  height: calc(110vh - 5rem);
+  /* border: 1px solid black; */
 }
 
 .apartment-form-container {
-    width: 1000px;
-    padding: 20px;
-    overflow: hidden;
-    border-radius: 10px;
-    padding-bottom: 10px;
-    background-color: transparent;
-    box-shadow: rgba(3, 102, 214, 0.2) 0px 0px 0px 3px;
-    position: relative;
+  width: 1000px;
+  padding: 20px;
+  overflow: hidden;
+  border-radius: 10px;
+  padding-bottom: 10px;
+  background-color: transparent;
+  box-shadow: rgba(3, 102, 214, 0.2) 0px 0px 0px 3px;
+  position: relative;
 }
 
-.apartment-form-container>section:first-child {
-    font-weight: 500;
-    color: #334155;
-    font-size: larger;
-    margin-bottom: 10px;
+.apartment-form-container > section:first-child {
+  font-weight: 500;
+  color: #334155;
+  font-size: larger;
+  margin-bottom: 10px;
 }
 
 /* Form Steps */
 
 .form-steps.property-details {
-    padding: 5px;
-    height: 160px;
-    overflow-y: scroll;
-    border-radius: 5px;
-    border: 1px solid rgba(3, 102, 214, 0.3);
+  padding: 5px;
+  height: 160px;
+  overflow-y: scroll;
+  border-radius: 5px;
+  border: 1px solid rgba(3, 102, 214, 0.3);
 }
 
 .form-steps.property-details::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 .form-steps.property-details::-webkit-scrollbar-track {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .form-steps.property-details::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: rgba(3, 102, 214, 0.3);
+  border-radius: 10px;
+  background-color: rgba(3, 102, 214, 0.3);
 }
 
 .form-steps.property-details::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(3, 102, 214, 0.5);
+  background-color: rgba(3, 102, 214, 0.5);
 }
 
 .form-steps .inputs-section {
-    display: flex;
-    gap: 25px 50px;
-    flex-wrap: wrap;
+  display: flex;
+  gap: 25px 50px;
+  flex-wrap: wrap;
 }
 
 @media screen and (max-width: 1200px) {
-    .apartment-form-wrapper {
-        height: auto;
-    }
+  .apartment-form-wrapper {
+    height: auto;
+  }
 
-    .apartment-form-container {
-        padding: 0;
-        box-shadow: none;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        width: fit-content;
-    }
+  .apartment-form-container {
+    padding: 0;
+    box-shadow: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: fit-content;
+  }
 
-    .apartment-form-container>section:first-child {
-        margin-left: 5px;
-    }
+  .apartment-form-container > section:first-child {
+    margin-left: 5px;
+  }
 
-    .form-steps .inputs-section {
-        gap: 15px 0;
-        flex-wrap: nowrap;
-        flex-direction: column;
-    }
+  .form-steps .inputs-section {
+    gap: 15px 0;
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
 
-    .form-steps.property-details {
-        height: auto;
-        border: none;
-        padding-top: 5px;
-        overflow-y: auto;
-    }
+  .form-steps.property-details {
+    height: auto;
+    border: none;
+    padding-top: 5px;
+    overflow-y: auto;
+  }
 }
 
 /* Aminities */
 
 .aminities-wrapper {
-    display: flex;
-
+  display: flex;
 }
 
 .aminities-wrapper .col1 {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
 }
 
 .aminities-wrapper .col2 {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
 }
 
 /* Upload Image */
 
 .upload-image-form-wrapper {
-    width: 100%;
-
+  width: 100%;
 }
 
 .upload-image-form-wrapper .images-wrapper {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .upload-image-form-wrapper .images-wrapper .uploaded-images {
-    width: 4rem;
-    height: 4rem;
-    margin-right: 1rem;
-    margin-top: 1rem;
+  width: 4rem;
+  height: 4rem;
+  margin-right: 1rem;
+  margin-top: 1rem;
 }
 
 .upload-image-form-wrapper .images-wrapper .uploaded-images img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 /* Preview Button */
 
 .preview-button {
-    right: 1rem;
-    bottom: 1rem;
-    width: fit-content;
-    position: absolute;
-    border-radius: 5px;
-    background-color: white;
-    border: 2px solid rgba(3, 102, 214, 0.3);
+  right: 1rem;
+  bottom: 1rem;
+  width: fit-content;
+  position: absolute;
+  border-radius: 5px;
+  background-color: white;
+  border: 2px solid rgba(3, 102, 214, 0.3);
 }
