--- a/client/src/components/product-forms/apartment-form/ApartmentForm.css
+++ b/client/src/components/product-forms/apartment-form/ApartmentForm.css
@@ -138,11 +138,22 @@
 /* Preview Button */
 
 .preview-button {
-  right: 1rem;
-  bottom: 1rem;
-  width: fit-content;
-  position: absolute;
-  border-radius: 5px;
-  background-color: white;
-  border: 2px solid rgba(3, 102, 214, 0.3);
+    right: 1rem;
+    bottom: 1rem;
+    width: fit-content;
+    position: absolute;
+    border-radius: 5px;
+    background-color: white;
+    border: 2px solid rgba(3, 102, 214, 0.3);
+}
+
+.preview-form-modal {
+    width: 75%;
+    margin: auto;
+}
+
+@media screen and (max-width: 900px) {
+    .preview-form-modal {
+        width: 90%;
+    }
 }
