--- a/client/src/components/edit-forms/allFormsCommonCSS.css
+++ b/client/src/components/edit-forms/allFormsCommonCSS.css
@@ -3,7 +3,20 @@
 }
 .edit-form-wrap .row1 {
   margin-top: 7rem;
+  display: flex;
 }
-.edit-form-wrap .row1 h5 {
-  text-transform: uppercase;
+
+.edit-form-wrap .row1 > div {
+  width: 5rem;
+  height: 5rem;
+}
+
+.edit-form-wrap .row1 > div > img {
+  width: 100%;
+  height: 100%;
+}
+.edit-form-wrap .row1 h6 {
+  text-transform: capitalize;
+  padding-top: 2.5rem;
+  padding-left: 1rem;
 }
