--- a/client/src/components/edit-forms/allFormsCommonCSS.css
+++ b/client/src/components/edit-forms/allFormsCommonCSS.css
@@ -6,11 +6,6 @@
   display: flex;
 }
 
-.edit-form-wrap .row1 > div {
-  width: 5rem;
-  height: 5rem;
-}
-
 .edit-form-wrap .row1 > div > img {
   width: 100%;
   height: 100%;
@@ -19,4 +14,23 @@
   text-transform: capitalize;
   padding-top: 2.5rem;
   padding-left: 1rem;
+}
+
+.edit-form-wrap .form-row > .whyinvest-input {
+  width: 100%;
+  min-height: 7rem;
+  max-height: 15rem;
+  padding: 1rem;
+}
+
+.edit-form-wrap .form-row .arr-wrap .arr-item {
+  border: 1px solid rgb(217, 217, 217);
+}
+
+.edit-form-wrap textarea {
+  border: 1px solid lightgrey;
+}
+
+.edit-form-wrap textarea:focus {
+  outline: 1px solid rgb(133, 228, 249);
 }
