--- a/client/src/components/app-bar/AppNavbar.css
+++ b/client/src/components/app-bar/AppNavbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap');
+
 :root {
   --background: black;
   --border: 1px solid white;
@@ -5,131 +7,75 @@
   --hover-bg: rgb(196, 49, 9);
 }
 
-/* general css */
-.app-navbar-wrap ul {
-  list-style-type: none;
+.app-navbar-wrap {
+  top: 0;
+  width: 100%;
+  z-index: 10;
+  height: 5rem;
+  display: flex;
+  position: fixed;
+  padding: 0 50px;
+  padding-right: 60px;
+  margin-bottom: 0;
+  color: #f1f5f9;
+  font-weight: 300;
+  align-items: center;
+  background-color: black;
+  text-transform: capitalize;
+  justify-content: space-between;
 }
 
-.app-navbar-wrap ul li {
-  height: 3rem;
-  padding: 0.5rem 1rem;
+.app-navbar-wrap * {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.app-navbar-wrap .col2 {
+  gap: 30px;
+  display: flex;
+  font-size: 14px;
+  align-items: center;
+}
+
+.app-navbar-wrap .col2>*:hover {
   cursor: pointer;
 }
 
-.app-navbar-wrap ul li:hover {
-  background-color: var(--hover-bg);
-}
+/* Fractional Properties */
 
-/* general css ends */
-.app-navbar-wrap {
-  width: 100%;
-  height: 5rem;
-  position: fixed;
-  top: 0;
-  text-align: center;
-  color: var(--fontColor);
-  background-color: var(--background);
-  display: grid;
-  grid-template-columns: 20% 80%;
-  z-index: 10;
-}
-
-/* col1 */
 .app-navbar-wrap .col1 {
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.app-navbar-wrap .col1 > button {
-  border: 0;
-  outline: none;
-  color: white;
-  padding: 0.5rem 1rem;
-  text-transform: uppercase;
-  cursor: pointer;
-  background-color: transparent;
-}
-
-.app-navbar-wrap .col1 > button:hover {
-  background-color: var(--hover-bg);
-}
-
-.app-navbar-wrap .col1 .landing-page-submenu {
+.hidden-dropdown {
+  right: 0;
+  top: 40px;
   position: absolute;
-  top: 100%;
-  background-color: var(--background);
-  width: 15rem;
+  background-color: rgb(0, 0, 0, 0.8);
 }
 
-.app-navbar-wrap .col1 .landing-page-submenu li > span {
-  border-bottom: var(--border);
-}
-
-.app-navbar-wrap .col1 .landing-page-submenu li {
-  text-align: left;
-  text-transform: uppercase;
-}
-
-.app-navbar-wrap .col1 .landing-page-submenu li .landing-page-nested-submenu {
+.hidden-nested-dropdown {
+  top: 0px;
+  right: -105px;
   position: absolute;
-  top: 0;
-  left: 100%;
-  width: 10rem;
-  background-color: var(--background);
+  background-color: rgb(0, 0, 0, 0.8);
 }
 
-/* col1 ends */
+/* Post Property */
 
-/* col2 */
-.app-navbar-wrap .col2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 3rem;
-}
-
-.app-navbar-wrap .col2 .navbar-item {
-  padding: 0.5rem 1rem;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-
-.app-navbar-wrap .col2 .navbar-item:hover {
-  background-color: rgb(196, 49, 9);
-}
-
-.app-navbar-wrap .col2 .subcol2-5 {
+.app-navbar-wrap .subcol2-5 {
   position: relative;
 }
 
-.app-navbar-wrap .col2 .subcol2-5 .submenu {
+.hidden-dropdown-2 {
+  right: 0;
+  top: 40px;
   position: absolute;
-  left: 0;
-  top: 100%;
-  width: 13rem;
-  background-color: var(--background);
+  background-color: rgb(0, 0, 0, 0.8);
 }
 
-.app-navbar-wrap .col2 .subcol2-5 .submenu li {
-  padding-left: 0;
-  text-align: left;
-  width: 100%;
-}
-
-.app-navbar-wrap .col2 .subcol2-5 .nested-submenu {
+.hidden-nested-dropdown-2 {
+  top: 0px;
+  right: -105px;
   position: absolute;
-  top: 0%;
-  left: 85%;
-  width: 10rem;
-  background-color: var(--background);
-}
-
-.app-navbar-wrap .col2 .subcol2-5 .nested-submenu li {
-  padding-left: 1rem;
-}
-
-/* col2 ends */
-@media only screen and (max-width: 680px) {
+  background-color: rgb(0, 0, 0, 0.8);
 }
