--- a/client/src/components/app-bar/AppNavbar.css
+++ b/client/src/components/app-bar/AppNavbar.css
@@ -76,7 +76,7 @@
   position: absolute;
   top: 0;
   left: 100%;
-  width: 10rem;
+  width: 15rem;
   background-color: var(--background);
 }
 
@@ -91,9 +91,10 @@
 }
 
 .app-navbar-wrap .col2 .navbar-item {
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.1rem;
   text-transform: uppercase;
   cursor: pointer;
+  /* border: var(--border); */
 }
 
 .app-navbar-wrap .col2 .navbar-item:hover {
@@ -122,7 +123,7 @@
   position: absolute;
   top: 0%;
   left: 85%;
-  width: 10rem;
+  width: 15rem;
   background-color: var(--background);
 }
 
@@ -131,5 +132,79 @@
 }
 
 /* col2 ends */
+
+/* mobile view  navbar*/
+.app-navbar-wrap .mobile-view-navbar {
+  display: none;
+}
+/* mobile view  navbar ends*/
+
 @media only screen and (max-width: 680px) {
+  .app-navbar-wrap {
+    display: flex;
+    justify-content: space-between;
+  }
+  .app-navbar-wrap .col1 {
+    width: 20rem;
+    /* border: 1px solid white; */
+  }
+  .app-navbar-wrap .col2 {
+    display: none;
+  }
+
+  .app-navbar-wrap .mobile-view-navbar {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+  }
+  .app-navbar-wrap .mobile-view-navbar .menu-icon {
+    /* border: 1px solid white; */
+    width: 5rem;
+  }
+
+  .app-navbar-wrap .mobile-view-navbar .menu-icon .hamburger-menu {
+    width: 3rem;
+    height: 5rem;
+    opacity: 0.7;
+  }
+
+  .app-navbar-wrap .mobile-view-navbar .menu-icon .hamburger-menu:hover {
+    opacity: 1;
+  }
+
+  .app-navbar-wrap .mobile-view-navbar .mobile-navbar {
+    background-color: var(--background);
+    width: 80%;
+    height: 35rem;
+    position: absolute;
+    top: 100%;
+    left: 30%;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding: 1rem;
+    overflow: scroll;
+    z-index: 20;
+  }
+
+  .app-navbar-wrap .mobile-view-navbar .mobile-navbar > div .mob-navbar-item {
+    font-size: 1.2rem;
+    padding: 0.5rem 0;
+    text-transform: uppercase;
+    /* border: var(--border); */
+  }
+  .app-navbar-wrap
+    .mobile-view-navbar
+    .mobile-navbar
+    > div
+    .mob-submenu
+    .mob-nested-submenu {
+    background-color: black;
+    box-shadow: 10px 10px 200px 20px rgb(105, 105, 105);
+    position: absolute;
+    top: 70%;
+    left: 6%;
+    width: 100%;
+    height: 20rem;
+  }
 }
