--- a/client/src/components/app-bar/AppNavbar.css
+++ b/client/src/components/app-bar/AppNavbar.css
@@ -80,9 +80,36 @@
   background-color: rgb(0, 0, 0, 0.8);
 }
 
+/* mobile nav */
+.mobile-nav-wrap {
+  display: none;
+}
+/* mobile nav  ends*/
+
 @media only screen and (max-width: 680px) {
+  .app-navbar-wrap {
+    display: flex;
+    flex-direction: row-reverse;
+  }
   .app-navbar-wrap .col2 {
     gap: 30px;
     display: none;
   }
+
+  .app-navbar-wrap {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  /* mobile nav */
+  .mobile-nav-wrap {
+    display: block;
+  }
+  .mobile-nav-wrap .menu-icon {
+    width: 3rem;
+    height: 2.5rem;
+    color: #1976d2;
+  }
+
+  /* mobile nav  ends*/
 }
