--- a/client/src/components/app-bar/AppNavbar.css
+++ b/client/src/components/app-bar/AppNavbar.css
@@ -15,7 +15,6 @@
   display: flex;
   position: fixed;
   padding: 0 50px;
-  padding-right: 60px;
   margin-bottom: 0;
   color: #f1f5f9;
   font-weight: 300;
@@ -88,6 +87,7 @@
 
 @media only screen and (max-width: 680px) {
   .app-navbar-wrap {
+    padding: 0 20px;
     display: flex;
     flex-direction: row-reverse;
   }
@@ -99,6 +99,23 @@
   .app-navbar-wrap {
     display: flex;
     justify-content: space-between;
+  }
+
+  /* Fractional Properties */
+
+  .hidden-dropdown {
+    width: 80%;
+    right: 20%;
+    top: 40px;
+    position: absolute;
+    background-color: rgb(0, 0, 0, 0.8);
+  }
+
+  .hidden-nested-dropdown {
+    top: 50px;
+    right: 0px;
+    position: absolute;
+    background-color: rgb(0, 0, 0, 0.8);
   }
 
   /* mobile nav */
