--- a/client/src/components/products-landingPages/apartment/Apartment.css
+++ b/client/src/components/products-landingPages/apartment/Apartment.css
@@ -43,10 +43,6 @@
   border-radius: 50%;
 }
 
-.apartment-page-container .banner div:nth-child(3) {
-  display: none;
-}
-
 .apartment-page-container .banner div:last-child {
   position: absolute;
   width: 40%;
@@ -87,30 +83,38 @@
     height: 20rem;
     position: relative;
     background-color: transparent;
+    flex-direction: column;
   }
   .apartment-page-container .banner div:first-child {
-    display: none;
+    display: block;
+  }
+
+  .apartment-page-container .banner div:first-child img {
+    width: 100%;
+    height: 100%;
+    border-bottom-left-radius: 0;
   }
 
   .apartment-page-container .banner div:nth-child(2) {
     display: none;
   }
+  .apartment-page-container .banner div:nth-child(2) {
+  }
 
+  .apartment-page-container .banner div:nth-child(3) {
+    position: absolute;
+    left: 40%;
+    top: 15%;
+    display: none;
+  }
   .apartment-page-container .banner div:last-child {
     position: absolute;
     width: 100%;
-    height: 100%;
-    bottom: 0;
-    left: 0;
+    text-align: center;
+    background-color: rgb(0, 0, 0, 0.6);
   }
-
   .apartment-page-container .banner div:last-child > p {
-    position: absolute;
-    padding: 0.5rem 1rem;
-    line-height: 1.5rem;
-    font-size: 1.2rem;
-    font-weight: bold;
-    font-family: "calibri";
+    color: white;
   }
 
   .apartment-page-container .outer-wrap {
