--- a/client/src/components/products-landingPages/car/Car.css
+++ b/client/src/components/products-landingPages/car/Car.css
@@ -12,7 +12,7 @@
 
 .car-landing-page-wrapper .banner-section {
   width: 100%;
-  height: calc(100vh - 5rem);
+  height: calc(100vh);
   background-image: url("https://wallpapercave.com/wp/wp2707576.jpg");
   background-position: center center;
   background-repeat: no-repeat;
