--- a/client/src/components/products-landingPages/agricultural-land/Agricultural-Land.css
+++ b/client/src/components/products-landingPages/agricultural-land/Agricultural-Land.css
@@ -4,7 +4,7 @@
   margin-bottom: 0;
   position: relative;
   background-size: cover;
-  height: calc(100vh - 5rem);
+  height: calc(100vh);
   background-position: center center;
   background-image: url("https://images.pexels.com/photos/636342/pexels-photo-636342.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
@@ -16,6 +16,7 @@
   text-align: justify;
   width: 80%;
 }
+
 .land-page-container .bg-image .content h4 {
   font-size: 2rem;
   background: -webkit-linear-gradient(rgb(253, 253, 253), rgb(239, 200, 165));
