--- a/client/src/components/products-landingPages/farmhouse/Farmhouse.css
+++ b/client/src/components/products-landingPages/farmhouse/Farmhouse.css
@@ -4,7 +4,7 @@
   margin-bottom: 0;
   position: relative;
   background-size: cover;
-  height: calc(100vh - 5rem);
+  height: calc(100vh);
   background-position: center center;
   background-image: url("https://wallpaperaccess.com/full/2098394.jpg");
 }
@@ -16,6 +16,7 @@
   text-align: justify;
   width: 80%;
 }
+
 .farmhouse-page-container .bg-image .content h4 {
   font-size: 2rem;
   background: -webkit-linear-gradient(rgb(253, 253, 253), rgb(239, 200, 165));
@@ -31,7 +32,7 @@
   font-family: "Domine", serif;
 }
 
-.farmhouse-page-container > section {
+.farmhouse-page-container>section {
   margin-top: 2rem;
 }
 
