--- a/client/src/components/products-landingPages/shop/Shop.css
+++ b/client/src/components/products-landingPages/shop/Shop.css
@@ -4,7 +4,7 @@
     margin-bottom: 0;
     position: relative;
     background-size: cover;
-    height: calc(100vh - 5rem);
+    height: calc(100vh);
     background-position: center center;
     background-image: url("https://images.pexels.com/photos/269077/pexels-photo-269077.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
