added new landing page

--- a/client/src/components/app-bar/AppNavbar.css
+++ b/client/src/components/app-bar/AppNavbar.css
@@ -25,7 +25,7 @@
 }
 
 .app-navbar-wrap * {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Helvetica", Arial, sans-serif;
 }
 
 .app-navbar-wrap .col2 {
