--- a/client/src/components/HomeVideo/HomeVideo.css
+++ b/client/src/components/HomeVideo/HomeVideo.css
@@ -1,4 +1,4 @@
-.testimonial-slider {
+.home-video {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +8,7 @@
   height: 100%;
 }
 
-.testimonial-slider h2 {
+.home-video h2 {
   width: 100%;
   text-align: center;
   font-family: 'Playfair Display', serif;
@@ -55,7 +55,7 @@
 }
 
 @media screen and (max-width: 600px) {
-  .testimonial-slider h2 {
+  .home-video h2 {
     font-size: 28px;
     font-weight: 500;
     margin-bottom: 3rem;
@@ -63,7 +63,7 @@
 }
 
 @media screen and (max-width: 480px) {
-  .testimonial-slider {
+  .home-video {
     margin-top: 5rem;
     width: 100%;
   }
