--- a/client/src/components/products-landingPages/apartment/Apartment.css
+++ b/client/src/components/products-landingPages/apartment/Apartment.css
@@ -3,7 +3,7 @@
 .apartment-page-container * {
   font-family: "Montserrat", sans-serif;
 }
-
+/* banner  */
 .apartment-page-container .banner {
   display: flex;
   height: 40rem;
@@ -20,11 +20,13 @@
   height: 100%;
   top: 0;
   right: 0;
-  background: linear-gradient(to top,
-      black,
-      rgb(32, 32, 32),
-      rgb(79, 79, 79),
-      rgb(116, 116, 116));
+  background: linear-gradient(
+    to top,
+    black,
+    rgb(32, 32, 32),
+    rgb(79, 79, 79),
+    rgb(116, 116, 116)
+  );
 }
 
 .apartment-page-container .banner div:first-child img {
@@ -55,7 +57,7 @@
   left: 0;
 }
 
-.apartment-page-container .banner div:last-child>p {
+.apartment-page-container .banner div:last-child > p {
   position: absolute;
   bottom: 1%;
   right: 0;
@@ -65,11 +67,13 @@
   font-size: 1rem;
 }
 
+/* banner ends */
+
 .apartment-page-container .outer-wrap {
   margin-top: 2rem;
 }
 
-.apartment-page-container .outer-wrap>h4 {
+.apartment-page-container .outer-wrap > h4 {
   margin-left: 2rem;
 }
 
@@ -104,7 +108,8 @@
     display: none;
   }
 
-  .apartment-page-container .banner div:nth-child(2) {}
+  .apartment-page-container .banner div:nth-child(2) {
+  }
 
   .apartment-page-container .banner div:nth-child(3) {
     position: absolute;
@@ -120,7 +125,7 @@
     background-color: rgb(0, 0, 0, 0.6);
   }
 
-  .apartment-page-container .banner div:last-child>p {
+  .apartment-page-container .banner div:last-child > p {
     color: white;
   }
 
@@ -128,7 +133,7 @@
     margin-top: 2rem;
   }
 
-  .apartment-page-container .outer-wrap>h4 {
+  .apartment-page-container .outer-wrap > h4 {
     margin-left: 2rem;
   }
 
