--- a/client/src/components/products-landingPages/apartment/Apartment.css
+++ b/client/src/components/products-landingPages/apartment/Apartment.css
@@ -3,6 +3,7 @@
 .apartment-page-container * {
   font-family: "Montserrat", sans-serif;
 }
+
 /* banner  */
 .apartment-page-container .banner {
   display: flex;
@@ -20,13 +21,11 @@
   height: 100%;
   top: 0;
   right: 0;
-  background: linear-gradient(
-    to top,
-    black,
-    rgb(32, 32, 32),
-    rgb(79, 79, 79),
-    rgb(116, 116, 116)
-  );
+  background: linear-gradient(to top,
+      black,
+      rgb(32, 32, 32),
+      rgb(79, 79, 79),
+      rgb(116, 116, 116));
 }
 
 .apartment-page-container .banner div:first-child img {
@@ -57,7 +56,7 @@
   left: 0;
 }
 
-.apartment-page-container .banner div:last-child > p {
+.apartment-page-container .banner div:last-child>p {
   position: absolute;
   bottom: 1%;
   right: 0;
@@ -73,7 +72,7 @@
   margin-top: 2rem;
 }
 
-.apartment-page-container .outer-wrap > h4 {
+.apartment-page-container .outer-wrap>h4 {
   margin-left: 2rem;
 }
 
@@ -108,8 +107,7 @@
     display: none;
   }
 
-  .apartment-page-container .banner div:nth-child(2) {
-  }
+  .apartment-page-container .banner div:nth-child(2) {}
 
   .apartment-page-container .banner div:nth-child(3) {
     position: absolute;
@@ -125,7 +123,7 @@
     background-color: rgb(0, 0, 0, 0.6);
   }
 
-  .apartment-page-container .banner div:last-child > p {
+  .apartment-page-container .banner div:last-child>p {
     color: white;
   }
 
@@ -133,7 +131,7 @@
     margin-top: 2rem;
   }
 
-  .apartment-page-container .outer-wrap > h4 {
+  .apartment-page-container .outer-wrap>h4 {
     margin-left: 2rem;
   }
 
