--- a/client/src/components/products-landingPages/farmhouse/Farmhouse.css
+++ b/client/src/components/products-landingPages/farmhouse/Farmhouse.css
@@ -1,50 +1,140 @@
 @import url("https://fonts.googleapis.com/css2?family=Domine:wght@500&display=swap");
 
-.farmhouse-page-container .bg-image {
-  margin-bottom: 0;
+.farmhouse-page-container * {
+  font-family: "Montserrat", sans-serif;
+}
+
+/* banner  */
+.farmhouse-page-container .banner {
+  display: flex;
+  height: 40rem;
   position: relative;
   background-size: cover;
   height: calc(100vh);
   background-position: center center;
-  background-image: url("https://wallpaperaccess.com/full/2098394.jpg");
+  background-image: url("https://hbits.co/assets/images/home-banner.webp?auto=format&fit=max&w=1920");
 }
 
-.farmhouse-page-container .bg-image .content {
+.farmhouse-page-container .banner div:first-child {
   position: absolute;
-  top: 50%;
-  left: 5%;
-  text-align: justify;
-  width: 80%;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background: linear-gradient(to top,
+      black,
+      rgb(32, 32, 32),
+      rgb(79, 79, 79),
+      rgb(116, 116, 116));
 }
 
-.farmhouse-page-container .bg-image .content h4 {
-  font-size: 2rem;
-  background: -webkit-linear-gradient(rgb(253, 253, 253), rgb(239, 200, 165));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: 1px 0px 0px rgb(255, 255, 255);
-  font-family: "calibri";
+.farmhouse-page-container .banner div:first-child img {
+  width: 100%;
+  height: 100%;
+  border-bottom-left-radius: 100%;
 }
 
-.farmhouse-page-container section h4 {
-  color: #334155;
-  margin-left: 20px;
-  font-family: "Domine", serif;
+.farmhouse-page-container .banner div:nth-child(2) {
+  position: absolute;
+  width: 20%;
+  height: 45%;
+  top: 30%;
+  left: 0;
 }
 
-.farmhouse-page-container>section {
+.farmhouse-page-container .banner div:nth-child(2) img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.farmhouse-page-container .banner div:last-child {
+  position: absolute;
+  width: 40%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+}
+
+.farmhouse-page-container .banner div:last-child>p {
+  position: absolute;
+  bottom: 1%;
+  right: 0;
+  padding: 0.5rem 1rem;
+  line-height: 1.5rem;
+  color: white;
+  font-size: 1rem;
+}
+
+/* banner ends */
+
+.farmhouse-page-container .outer-wrap {
   margin-top: 2rem;
+}
+
+.farmhouse-page-container .outer-wrap>h4 {
+  margin-left: 2rem;
 }
 
 .farmhouse-card-container {
   display: grid;
-  margin: 0 20px;
+  margin: 0 30px;
   border-radius: 10px;
   background-color: #f1f5f9;
   grid-template-columns: repeat(2, 1fr);
 }
 
 @media screen and (max-width: 700px) {
+  .farmhouse-page-container .banner {
+    display: flex;
+    height: 20rem;
+    position: relative;
+    background-color: transparent;
+    flex-direction: column;
+  }
+
+  .farmhouse-page-container .banner div:first-child {
+    display: block;
+  }
+
+  .farmhouse-page-container .banner div:first-child img {
+    width: 100%;
+    height: 100%;
+    border-bottom-left-radius: 0;
+  }
+
+  .farmhouse-page-container .banner div:nth-child(2) {
+    display: none;
+  }
+
+  .farmhouse-page-container .banner div:nth-child(2) {}
+
+  .farmhouse-page-container .banner div:nth-child(3) {
+    position: absolute;
+    left: 40%;
+    top: 15%;
+    display: none;
+  }
+
+  .farmhouse-page-container .banner div:last-child {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    background-color: rgb(0, 0, 0, 0.6);
+  }
+
+  .farmhouse-page-container .banner div:last-child>p {
+    color: white;
+  }
+
+  .farmhouse-page-container .outer-wrap {
+    margin-top: 2rem;
+  }
+
+  .farmhouse-page-container .outer-wrap>h4 {
+    margin-left: 2rem;
+  }
+
   .farmhouse-card-container {
     grid-template-columns: repeat(1, 1fr);
   }
