--- a/client/src/components/products-landingPages/shop/Shop.css
+++ b/client/src/components/products-landingPages/shop/Shop.css
@@ -1,33 +1,140 @@
-@import url('https://fonts.googleapis.com/css2?family=Domine:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Domine:wght@500&display=swap");
 
-.shop-page-container .bg-image {
-    margin-bottom: 0;
+.shop-page-container * {
+    font-family: "Montserrat", sans-serif;
+}
+
+/* banner  */
+.shop-page-container .banner {
+    display: flex;
+    height: 40rem;
     position: relative;
     background-size: cover;
     height: calc(100vh);
     background-position: center center;
-    background-image: url("https://images.pexels.com/photos/269077/pexels-photo-269077.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-image: url("https://hbits.co/assets/images/home-banner.webp?auto=format&fit=max&w=1920");
 }
 
-.shop-page-container section h4 {
-    color: #334155;
-    margin-left: 20px;
-    font-family: 'Domine', serif;
+.shop-page-container .banner div:first-child {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background: linear-gradient(to top,
+            black,
+            rgb(32, 32, 32),
+            rgb(79, 79, 79),
+            rgb(116, 116, 116));
 }
 
-.shop-page-container>section {
+.shop-page-container .banner div:first-child img {
+    width: 100%;
+    height: 100%;
+    border-bottom-left-radius: 100%;
+}
+
+.shop-page-container .banner div:nth-child(2) {
+    position: absolute;
+    width: 20%;
+    height: 45%;
+    top: 30%;
+    left: 0;
+}
+
+.shop-page-container .banner div:nth-child(2) img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.shop-page-container .banner div:last-child {
+    position: absolute;
+    width: 40%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+}
+
+.shop-page-container .banner div:last-child>p {
+    position: absolute;
+    bottom: 1%;
+    right: 0;
+    padding: 0.5rem 1rem;
+    line-height: 1.5rem;
+    color: white;
+    font-size: 1rem;
+}
+
+/* banner ends */
+
+.shop-page-container .outer-wrap {
     margin-top: 2rem;
+}
+
+.shop-page-container .outer-wrap>h4 {
+    margin-left: 2rem;
 }
 
 .shop-card-container {
     display: grid;
-    margin: 0 20px;
+    margin: 0 30px;
     border-radius: 10px;
     background-color: #f1f5f9;
     grid-template-columns: repeat(2, 1fr);
 }
 
 @media screen and (max-width: 700px) {
+    .shop-page-container .banner {
+        display: flex;
+        height: 20rem;
+        position: relative;
+        background-color: transparent;
+        flex-direction: column;
+    }
+
+    .shop-page-container .banner div:first-child {
+        display: block;
+    }
+
+    .shop-page-container .banner div:first-child img {
+        width: 100%;
+        height: 100%;
+        border-bottom-left-radius: 0;
+    }
+
+    .shop-page-container .banner div:nth-child(2) {
+        display: none;
+    }
+
+    .shop-page-container .banner div:nth-child(2) {}
+
+    .shop-page-container .banner div:nth-child(3) {
+        position: absolute;
+        left: 40%;
+        top: 15%;
+        display: none;
+    }
+
+    .shop-page-container .banner div:last-child {
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        background-color: rgb(0, 0, 0, 0.6);
+    }
+
+    .shop-page-container .banner div:last-child>p {
+        color: white;
+    }
+
+    .shop-page-container .outer-wrap {
+        margin-top: 2rem;
+    }
+
+    .shop-page-container .outer-wrap>h4 {
+        margin-left: 2rem;
+    }
+
     .shop-card-container {
         grid-template-columns: repeat(1, 1fr);
     }
